# Tents

./: .gitignore  Amira  CMakeLists.txt  README.md  date.txt  dlist.c  dlist.h  extra_functions.h  game.c  game.h  game_aux.c  game_ext.h  game_random.c  game_sdl.c  game_solve.c  game_test_alleymarie.c  game_test_alleymarie.c.save  game_test_amastouri.c  game_test_khorvath.c  game_test_marbeites.c  game_text.c  game_tools.c  game_tools.h  graphic_mode.c  level10.tnt  level3.tnt  level4.tnt  minimal.c  model.c  model.h  queue.c  queue.h  rendu  save2.tnt  save3.tnt  test_queue.c
android/: AndroidManifest.xml  build.xml  mario.apk
android/assets/: level11.tnt  test.tnt
android/jni/src/: Android.mk  dlist.c  dlist.h  extra_functions.h  game_solve.c  graphic_mode.c  graphic_mode.h
games/: game_10x10_1_EASY.txt  game_10x10_2_HARD.txt  game_10x10_3_HARD.txt  game_10x15_1_EASY.txt  game_10x15_2_HARD.txt  game_15x15_1_HARD.txt  game_15x15_2_EASY.txt  game_8x8_1_HARD.txt  game_8x8_2_EASY.txt  level1.tnt  level2.tnt  level5.tnt  level6.tnt  level7.tnt  level8.tnt  level9.tnt
